--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": "^23.5.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
+    "tsc-watch": "^6.2.1",
     "w7": "file:"
   },
   "devDependencies": {
